--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,4 +9,14 @@
 <body>
     
 </body>
+<body>
+    <head class="cabeçalho">
+<span class="cabeçalho__menu-hamburguer"></span>
+<img src="img/logo.svg" alt="logo da alurabooks">
+<a href="#"><img src="img/favoritos.svg"></a>
+<a href="#"><img src="img/compras.svg"></a>
+<a href="#"><img src="img/usuario.svg"></a>
+    </header>
+
+    </body>
 </html>
