--- a/index.html
+++ b/index.html
@@ -4,19 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>alura book</title>
+    <title>Alura Book</title>
+    <link rel="stylesheet"href="style.css">
+    <link rel="stylesheet"href="reset.css">
 </head>
-<body>
-    
-</body>
-<body>
-    <head class="cabeçalho">
-<span class="cabeçalho__menu-hamburguer"></span>
-<img src="img/logo.svg" alt="logo da alurabooks">
-<a href="#"><img src="img/favoritos.svg"></a>
-<a href="#"><img src="img/compras.svg"></a>
-<a href="#"><img src="img/usuario.svg"></a>
-    </header>
 
-    </body>
+<body>
+    <header class="cabeçalho">
+        <div class="container">
+            <input type="checkbox" id="menu" class="container__botao"
+            <label for="menu"></label>
+        <span class="cabeçalho__menu-hamburguercontainer__imagem"></span>
+        </label>
+        <ul class="lista-menu">
+            <li class="lista-menu__titulo">categoria</li>
+            <li class="lista-menu__item">
+                <a href="#" class="lista-menu__link">programacao</a>
+            </li>
+            <li class="lista-menu__item">
+                <a href="#" class="lista-menu__link">front-end</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Infraestrutura</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">business</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">dising-UX</a>
+                </li>
+        </ul>
+        <img src="img/logo.svg" alt="logo da Alurabooks">
+        <a href="#"><img src="img/Favoritos.svg"></a>
+        <a href="#"><img src="img/Compras.svg"></a>
+        <a href="#"><img src="img/Usuario.svg"></a>
+    </header>
+</body>
 </html>
