--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
         <a href="#"><img src="img/Favoritos.svg"></a>
         <a href="#"><img src="img/Compras.svg"></a>
         <a href="#"><img src="img/Usuario.svg"></a>
+    </div>
     </header>
+    <section class="banner"></section>
+    <h2 class="banner__titulo">ja sabe por onde começar?</h2>
+    <p class="banner__texto">encontrem em nossa estante o que precisa para seu desinvolvimento!</p>
+    <input type="search" class="banner__pesquisa" placeholder="qual sera sua proxima leitura?">
+</section>
+<section class="carrosel">
+    <h2 class="carrosel__titulo">novos lançamentos</h2>
+</section>
 </body>
 </html>
